--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
@@ -250,10 +250,7 @@
      "text": [
       "assistant working...\n",
       "assistant working...\n",
-      "assistant working...\n",
-      "assistant working...\n",
-      "assistant working...\n",
-      "Assistants Response: Here's the MongoDB aggregation pipeline that can produce the expected output for the given input:\n",
+      "Assistants Response: The MongoDB aggregation pipeline to produce the expected output for the given input is as follows:\n",
       "\n",
       "```json\n",
       "[\n",
@@ -274,11 +271,10 @@
       "```\n",
       "\n",
       "Explanation:\n",
-      "1. `$group` stage is used to group the documents by the `team` field and calculate the count of players within each group using the `$sum` accumulator.\n",
-      "2. The `_id` field is used to group the documents by the `team` field.\n",
-      "3. In the following `$project` stage, the `_id` field is excluded and the `team` and `playerCount` fields are projected.\n",
+      "1. `$group` stage is used to group the documents by the \"team\" field and calculate the count of players in each team using the `$sum` accumulator.\n",
+      "2. `$project` stage is then used to reshape the output, including only the \"team\" and \"playerCount\" fields while excluding the `_id`.\n",
       "\n",
-      "This pipeline first groups the documents by the `team` field and calculates the count of players for each team. Then, in the projection stage, it reshapes the output to match the expected format.\n"
+      "This aggregation pipeline first groups the documents by the \"team\" field and then counts the number of players in each team. Finally, it reshapes the output to match the expected format.\n"
      ]
     }
    ],
@@ -375,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "d45a211a-9162-4c8b-9f3b-cb54699c0d38",
    "metadata": {},
    "outputs": [],
@@ -385,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "bc3e03fd-b3d9-49c6-9947-8878329e800a",
    "metadata": {},
    "outputs": [],
@@ -395,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "e4ffbacf-de34-4de7-ab66-8cea4cfcf50c",
    "metadata": {},
    "outputs": [],
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "a8dd1233-6d22-4435-a091-aaabe679555a",
    "metadata": {},
    "outputs": [],
@@ -422,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "a75d618e-4066-4e14-9061-eab4c708785e",
    "metadata": {},
    "outputs": [
@@ -431,7 +427,7 @@
      "output_type": "stream",
      "text": [
       "Assistant Response:\n",
-      "{'mongoDBQuery': '[{\\n  \"$group\": {\\n    \"_id\": \"$team\",\\n    \"playerCount\": { \"$sum\": 1 }\\n  }\\n},{\\n  \"$project\": {\\n    \"team\": \"$_id\",\\n    \"playerCount\": 1,\\n    \"_id\": 0\\n  }\\n}]', 'queryExplanation': \"The MongoDB aggregation query consists of two stages:\\n1. $group stage: Groups the documents by the 'team' field and calculates the count of players in each team using the $sum aggregation operator.\\n2. $project stage: Reshapes the output to display the 'team' and 'playerCount' fields while removing the _id field.\"}\n"
+      "{'mongoDBQuery': '[ { \"$group\": { \"_id\": \"$team\", \"playerCount\": { \"$sum\": 1 } } }, { \"$project\": { \"_id\": 0, \"team\": \"$_id\", \"playerCount\": 1 } } ]', 'queryExplanation': \"The aggregation pipeline groups the input data by the 'team' field, calculates the count of players for each team using the $sum accumulator, then projects the output to include 'team' and 'playerCount' fields.\"}\n"
      ]
     }
    ],
@@ -481,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "03109185-72b1-4ff9-8e29-d8a1470c7e20",
    "metadata": {},
    "outputs": [],
@@ -510,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "0db9be5c-a35c-48e8-8a50-7f83c762f676",
    "metadata": {},
    "outputs": [],
@@ -529,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "24928944-78fa-42e8-9cd6-65b8d317c518",
    "metadata": {},
    "outputs": [],
@@ -555,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "fe6d3853-49ab-46f4-8f03-97cf3825fb79",
    "metadata": {},
    "outputs": [],
@@ -581,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "b715a60d-43b3-40ce-b0eb-27b01bea3520",
    "metadata": {},
    "outputs": [],
@@ -607,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2842f234-09b6-4d1f-a05f-a613cdba9844",
    "metadata": {},
    "outputs": [],
@@ -625,32 +621,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "94c6b76f-1bce-4802-8d14-85b4c1d5729e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Function Name: executeQuery\n",
-      "Arguments: {'mongoDBQuery': '[{\\n  \"$group\": {\\n    \"_id\": \"$team\",\\n    \"playerCount\": { \"$sum\": 1 }\\n  }\\n},\\n{\\n  \"$project\": {\\n    \"_id\": 0,\\n    \"team\": \"$_id\",\\n    \"playerCount\": 1\\n  }\\n} ]', 'queryExplanation': \"The aggregation pipeline first groups the data by the 'team' field and calculates the count of players for each team. Then, it projects the output to display only the 'team' and 'playerCount' fields.\"}\n",
-      "Assistant Response - MongoDB Query: [{\n",
-      "  \"$group\": {\n",
-      "    \"_id\": \"$team\",\n",
-      "    \"playerCount\": { \"$sum\": 1 }\n",
-      "  }\n",
-      "},\n",
-      "{\n",
-      "  \"$project\": {\n",
-      "    \"_id\": 0,\n",
-      "    \"team\": \"$_id\",\n",
-      "    \"playerCount\": 1\n",
-      "  }\n",
-      "} ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "thread, run = process_user_input(user_prompt)\n",
     "\n",
