--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
       "                }\n",
       "            }\n",
       "        ],\n",
-      "        \"queryExplanation\": \"The query consists of two stages in the aggregation pipeline. The first stage is the `$group` stage, which groups the documents by the 'team' field. For each group, it counts the number of players using the `$sum` accumulator, which increments by 1 for each document in the group, resulting in a count of players per team. The second stage is the `$project` stage, which reshapes each document in the stream; the `_id` field is suppressed and the 'team' field is set to the value of `_id` from the `$group` stage. The 'playerCount' field is included as is.\"\n",
+      "        \"queryExplanation\": \"The aggregation pipeline consists of two stages. In the first stage, `$group`, documents are grouped by the `team` field, which is used as the `_id` in the grouping. For each group, we count the number of players using the `$sum` accumulator, incrementing the count by 1 for each document in the group, and store this count in the `playerCount` field. In the second stage, `$project`, we reshape each document in the stream: the `_id` field, which contains the team name, is projected to a `team` field, and we include the `playerCount` field. We also exclude the `_id` field from the output by setting it to 0.\"\n",
       "    }\n",
       "\n"
      ]
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,70 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "\n",
-      "    {\n",
-      "      \"mongoDBQuery\": [\n",
-      "        {\n",
-      "          \"$match\": {\n",
-      "            \"courses.courseName\": {\n",
-      "              \"$exists\": true\n",
-      "            }\n",
-      "          }\n",
-      "        },\n",
-      "        {\n",
-      "          \"$unwind\": \"$courses\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"$group\": {\n",
-      "            \"_id\": {\n",
-      "              \"student\": \"$student\",\n",
-      "              \"courseName\": \"$courses.courseName\"\n",
-      "            },\n",
-      "            \"duplicateCount\": {\n",
-      "              \"$sum\": 1\n",
-      "            }\n",
-      "          }\n",
-      "        },\n",
-      "        {\n",
-      "          \"$match\": {\n",
-      "            \"duplicateCount\": {\n",
-      "              \"$gt\": 1\n",
-      "            }\n",
-      "          }\n",
-      "        },\n",
-      "        {\n",
-      "          \"$group\": {\n",
-      "            \"_id\": \"$_id.student\",\n",
-      "            \"duplicateCourses\": {\n",
-      "              \"$push\": {\n",
-      "                \"courseName\": \"$_id.courseName\",\n",
-      "                \"duplicateCount\": \"$duplicateCount\"\n",
-      "              }\n",
-      "            }\n",
-      "          }\n",
-      "        },\n",
-      "        {\n",
-      "          \"$project\": {\n",
-      "            \"_id\": 0,\n",
-      "            \"student\": \"$_id\",\n",
-      "            \"duplicateCourses\": 1\n",
-      "          }\n",
-      "        }\n",
-      "      ],\n",
-      "      \"queryExplanation\": \"The query starts by matching documents where 'courses.courseName' exists. It then unwinds the 'courses' array to deconstruct it into separate documents for each course. Next, it groups the documents by both 'student' and 'courseName' to calculate the count of each course per student. A subsequent match stage filters out the groups where the 'duplicateCount' is greater than 1, indicating duplicates. Another group stage then re-groups the documents by student, pushing the course names and their duplicate counts into an array called 'duplicateCourses'. Finally, the project stage formats the output to match the expected result, removing the '_id' field and setting the 'student' field to the grouped student name.\"\n",
-      "    }\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex2_input_data, ex2_output_data, GPT4_MODEL)"
    ]
@@ -376,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,43 +347,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "  \"mongoDBQuery\": [\n",
-      "    {\n",
-      "      \"$match\": {\n",
-      "        \"team\": \"India\"\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"$sort\": {\n",
-      "        \"age\": -1\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"$limit\": 1\n",
-      "    },\n",
-      "    {\n",
-      "      \"$project\": {\n",
-      "        \"_id\": 0,\n",
-      "        \"name\": 1,\n",
-      "        \"age\": 1,\n",
-      "        \"team\": 1\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"queryExplanation\": \"The aggregation pipeline starts by matching documents where the team is 'India'. Then, it sorts the matched documents based on age in descending order. After sorting, it limits the output to the first document, which will be the oldest player. Finally, it projects only the 'name', 'age', and 'team' fields in the output.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex3_input_data, ex3_output_data)"
    ]
@@ -462,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,31 +459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "  \"mongoDBQuery\": [\n",
-      "    {\n",
-      "      \"$addFields\": {\n",
-      "        \"features.properties.timeMongo\": {\n",
-      "          \"$dateFromString\": {\n",
-      "            \"dateString\": \"$features.properties.timeStamp\"\n",
-      "          }\n",
-      "        }\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"queryExplanation\": \"In this query, we use the $addFields stage to add a new field 'timeMongo' to the 'features.properties' sub-document. We use the $dateFromString aggregation operator to convert the 'timeStamp' field, which is in string format, to a Date object and store it in the 'timeMongo' field.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex4_input_data, ex4_output_data)"
    ]
@@ -594,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,43 +575,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "  \"mongoDBQuery\": [\n",
-      "    {\n",
-      "      \"$unwind\": \"$books\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"$unwind\": \"$books.authors\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"$group\": {\n",
-      "        \"_id\": \"$books.authors.authorName\",\n",
-      "        \"bookName\": {\n",
-      "          \"$addToSet\": \"$books.bookName\"\n",
-      "        }\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"$project\": {\n",
-      "        \"_id\": 0,\n",
-      "        \"authorName\": \"$_id\",\n",
-      "        \"bookName\": 1\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"queryExplanation\": \"The query starts by unwinding the 'books' array and then unwinding the 'authors' array within each book. Then it groups the data by the author's name and uses $addToSet to accumulate the unique book names for each author. Finally, it projects the output to display the author's name and their corresponding book names.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex5_input_data, ex5_output_data)"
    ]
@@ -744,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,54 +718,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "  \"mongoDBQuery\": [\n",
-      "    {\n",
-      "      \"$unwind\": \"$books\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"$project\": {\n",
-      "        \"bookName\": \"$books.bookName\",\n",
-      "        \"pages\": \"$books.pages\",\n",
-      "        \"authors\": \"$books.authors\"\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"$unwind\": \"$authors\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"$group\": {\n",
-      "        \"_id\": {\n",
-      "          \"bookName\": \"$bookName\",\n",
-      "          \"pages\": \"$pages\"\n",
-      "        },\n",
-      "        \"authors\": {\n",
-      "          \"$addToSet\": \"$authors\"\n",
-      "        }\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"$project\": {\n",
-      "        \"_id\": 0,\n",
-      "        \"bookName\": \"$_id.bookName\",\n",
-      "        \"pages\": \"$_id.pages\",\n",
-      "        \"authors\": 1\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"queryExplanation\": \"The query starts by unwinding the 'books' array to deconstruct the array into separate documents. Then, it projects the fields 'bookName', 'pages', and 'authors' from the unwound documents. After that, it unwinds the 'authors' array to deconstruct the array into separate documents. Next, it groups the documents by 'bookName' and 'pages', and accumulates the unique authors using $addToSet. Finally, it projects the final output with 'bookName', 'pages', and 'authors' fields while excluding the _id field.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex6_input_data, ex6_output_data)"
    ]
@@ -932,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,34 +837,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "  \"mongoDBQuery\": [\n",
-      "    {\n",
-      "      \"$unwind\": \"$authors\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"$project\": {\n",
-      "        \"bookName\": 1,\n",
-      "        \"pages\": 1,\n",
-      "        \"authorName\": \"$authors.authorName\",\n",
-      "        \"authorEmail\": \"$authors.authorEmail\",\n",
-      "        \"_id\": 0\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"queryExplanation\": \"The query starts by using the $unwind operator to deconstruct the authors array, creating a new document for each element in the array. Then, the $project stage is used to reshape the documents, including only the required fields and excluding the _id field. This results in the expected output with each author separated into individual documents.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex7_input_data, ex7_output_data)"
    ]
@@ -1076,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,45 +900,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "    \"mongoDBQuery\": [\n",
-      "        {\n",
-      "            \"$project\": {\n",
-      "                \"totalResultCount\": { \"$size\": \"$subjects\" },\n",
-      "                \"totalPassedCount\": {\n",
-      "                    \"$size\": {\n",
-      "                        \"$filter\": {\n",
-      "                            \"input\": \"$subjects\",\n",
-      "                            \"as\": \"subject\",\n",
-      "                            \"cond\": { \"$eq\": [\"$$subject.result\", \"passed\"] }\n",
-      "                        }\n",
-      "                    }\n",
-      "                },\n",
-      "                \"totalFailedCount\": {\n",
-      "                    \"$size\": {\n",
-      "                        \"$filter\": {\n",
-      "                            \"input\": \"$subjects\",\n",
-      "                            \"as\": \"subject\",\n",
-      "                            \"cond\": { \"$eq\": [\"$$subject.result\", \"failed\"] }\n",
-      "                        }\n",
-      "                    }\n",
-      "                }\n",
-      "            }\n",
-      "        }\n",
-      "    ],\n",
-      "    \"queryExplanation\": \"In this query, we are using the $project stage to reshape the document and calculate the totalResultCount, totalPassedCount, and totalFailedCount. We use the $size operator to get the total number of subjects. Then, we use the $filter operator within $size to count the number of subjects with 'passed' and 'failed' results separately.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex8_input_data, ex8_output_data)"
    ]
@@ -1175,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,64 +987,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant Response:\n",
-      "{\n",
-      "    \"mongoDBQuery\": [\n",
-      "        {\n",
-      "            \"$project\": {\n",
-      "                \"totalStudentsCount\": 1,\n",
-      "                \"totalResultCount\": { \"$size\": \"$subjects\" },\n",
-      "                \"totalPassedCount\": {\n",
-      "                    \"$size\": {\n",
-      "                        \"$filter\": {\n",
-      "                            \"input\": \"$subjects\",\n",
-      "                            \"as\": \"subject\",\n",
-      "                            \"cond\": { \"$eq\": [\"$$subject.result\", \"passed\"] }\n",
-      "                        }\n",
-      "                    }\n",
-      "                },\n",
-      "                \"totalFailedCount\": {\n",
-      "                    \"$size\": {\n",
-      "                        \"$filter\": {\n",
-      "                            \"input\": \"$subjects\",\n",
-      "                            \"as\": \"subject\",\n",
-      "                            \"cond\": { \"$eq\": [\"$$subject.result\", \"failed\"] }\n",
-      "                        }\n",
-      "                    }\n",
-      "                },\n",
-      "                \"totalUniqueSubjectsCount\": { \"$size\": { \"$setUnion\": \"$subjects.subjectName\" } },\n",
-      "                \"totalSubjectsCount\": { \"$sum\": { \"$map\": { \"input\": \"$subjects\", \"as\": \"subject\", \"in\": 1 } } }\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"$group\": {\n",
-      "                \"_id\": null,\n",
-      "                \"totalStudentsCount\": { \"$sum\": \"$totalStudentsCount\" },\n",
-      "                \"totalResultCount\": { \"$sum\": \"$totalResultCount\" },\n",
-      "                \"totalPassedCount\": { \"$sum\": \"$totalPassedCount\" },\n",
-      "                \"totalFailedCount\": { \"$sum\": \"$totalFailedCount\" },\n",
-      "                \"totalUniqueSubjectsCount\": { \"$first\": \"$totalUniqueSubjectsCount\" },\n",
-      "                \"totalSubjectsCount\": { \"$first\": \"$totalSubjectsCount\" }\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"$project\": {\n",
-      "                \"_id\": 0\n",
-      "            }\n",
-      "        }\n",
-      "    ],\n",
-      "    \"queryExplanation\": \"In this query, we first use the $project stage to calculate various counts and sizes based on the 'subjects' array. We calculate the total result count, total passed count, total failed count, total unique subjects count, and total subjects count. Then, we use the $group stage to sum up these counts across all documents. Finally, we use another $project stage to remove the _id field from the output.\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_mongodb_query(ex9_input_data, ex9_output_data)"
    ]
