--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "402e26c7-fec4-4839-8993-64dcc3f384c1",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "001ba67d-46b3-405b-b6a7-e448e8b21325",
    "metadata": {},
    "outputs": [],
@@ -197,13 +197,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f9f15c7-8979-499e-a9a5-06049bf9822a",
+   "metadata": {},
+   "source": [
+    "## Create a client"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "43f01f89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "openai_client = OpenAI()\n",
     "\n",
     "#GPT_MODEL = \"gpt-3.5-turbo-1106\"\n",
@@ -220,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "73f51585-3c30-47ca-9485-57a17ebdff47",
    "metadata": {},
    "outputs": [],
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4dab0362-5906-47eb-bf1b-b0977b3ded2b",
    "metadata": {},
    "outputs": [],
@@ -312,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7334b7ae-d6fd-42a7-b262-6818d630273c",
    "metadata": {},
    "outputs": [],
@@ -347,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "739eb08f-3106-4055-aef4-bda7674bc9c6",
    "metadata": {},
    "outputs": [],
@@ -379,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "053c2dd0-73f4-49e7-a420-1368cd5b0cb4",
    "metadata": {},
    "outputs": [],
@@ -417,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1774dbc5-0e71-47d4-8a08-47eb4a6b9cc5",
    "metadata": {},
    "outputs": [],
@@ -444,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "de502a2c-787f-4907-8a97-b776563a6fb9",
    "metadata": {},
    "outputs": [],
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "c3d1a2e5-54c2-40ad-8374-76d156845c52",
    "metadata": {},
    "outputs": [],
@@ -530,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9d2a6aae-05d6-4ffd-9bd0-433493cb6719",
    "metadata": {},
    "outputs": [
@@ -538,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chat_completion: ChatCompletion(id='chatcmpl-8dVihaUDNh7mr3ZffKOg3JiZ3UUPj', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_7owge0JDeWWmynyfjvdI5SvP', function=Function(arguments='{\\n  \"inputData\": \"[{\\'name\\': \\'Sachin\\', \\'team\\': \\'India\\'}, {\\'name\\': \\'Sourav\\', \\'team\\': \\'India\\'}, {\\'name\\': \\'Lara\\', \\'team\\': \\'West Indies\\'}]\",\\n  \"expectedOutput\": \"[{\\'team\\': \\'India\\', \\'playerCount\\': 2}, {\\'team\\': \\'West Indies\\', \\'playerCount\\': 1}]\",\\n  \"mongoDBQuery\": \"[{\\'$group\\': {\\'_id\\': \\'$team\\', \\'playerCount\\': {\\'$sum\\': 1}}}, {\\'$project\\': {\\'team\\': \\'$_id\\', \\'_id\\': 0, \\'playerCount\\': 1}}]\"\\n}', name='verify_query'), type='function')]))], created=1704427415, model='gpt-4-1106-preview', object='chat.completion', system_fingerprint='fp_3905aa4f79', usage=CompletionUsage(completion_tokens=140, prompt_tokens=421, total_tokens=561))\n",
+      "chat_completion: ChatCompletion(id='chatcmpl-8q4gqyI6JIW1zYmmAWd0vUQE5nYeN', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_JCUK7KfLLnxtQOpZmks570ju', function=Function(arguments='{\\n  \"inputData\": \"[{\\'name\\': \\'Sachin\\', \\'team\\': \\'India\\'}, {\\'name\\': \\'Sourav\\', \\'team\\': \\'India\\'}, {\\'name\\': \\'Lara\\', \\'team\\': \\'West Indies\\'}]\",\\n  \"expectedOutput\": \"[{\\'team\\': \\'India\\', \\'playerCount\\': 2}, {\\'team\\': \\'West Indies\\', \\'playerCount\\': 1}]\",\\n  \"mongoDBQuery\": \"[{\\'$group\\': {\\'_id\\': \\'$team\\', \\'playerCount\\': {\\'$sum\\': 1}}}, {\\'$project\\': {\\'team\\': \\'$_id\\', \\'_id\\': 0, \\'playerCount\\': 1}}]\"\\n}', name='verify_query'), type='function')]))], created=1707421776, model='gpt-4-1106-preview', object='chat.completion', system_fingerprint='fp_225a6f324c', usage=CompletionUsage(completion_tokens=140, prompt_tokens=421, total_tokens=561))\n",
       "\u001b[31msystem: \n",
       "You are a MongoDB expert with great expertise in writing MongoDB queries \n",
       "for any given data to produce an expected output.\n",
@@ -571,7 +578,7 @@
       "Result: [{'playerCount': 1, 'team': 'West Indies'}, {'playerCount': 2, 'team': 'India'}]\n",
       "Results Match: True\n",
       "Results after invoking the function: {'result': 'success', 'message': 'This query produces the expected output'}\n",
-      "chat_completion: ChatCompletion(id='chatcmpl-8dViq23kYKDZyJBq9cIWPnLAewGxr', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='{\\n    \"mongoDBQuery\": [\\n        {\"$group\": {\"_id\": \"$team\", \"playerCount\": {\"$sum\": 1}}},\\n        {\"$project\": {\"team\": \"$_id\", \"_id\": 0, \"playerCount\": 1}}\\n    ],\\n    \"queryExplanation\": \"The query consists of two stages in the aggregation pipeline. The first stage is a $group stage, which groups the documents by the \\'team\\' field. For each group, it calculates the count of players by summing 1 for each document in the group, resulting in a \\'playerCount\\' field. The second stage is a $project stage, which reshapes each document in the stream; it includes the \\'team\\' field (renamed from the grouping \\'_id\\' field) and the \\'playerCount\\' field, while excluding the default \\'_id\\' field.\"\\n}', role='assistant', function_call=None, tool_calls=None))], created=1704427424, model='gpt-4-1106-preview', object='chat.completion', system_fingerprint='fp_c6efb4aa39', usage=CompletionUsage(completion_tokens=181, prompt_tokens=570, total_tokens=751))\n",
+      "chat_completion: ChatCompletion(id='chatcmpl-8q4h02GFaUmEVZj6p5joqpilH1BiX', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='{\\n    \"mongoDBQuery\": [\\n        {\"$group\": {\"_id\": \"$team\", \"playerCount\": {\"$sum\": 1}}},\\n        {\"$project\": {\"team\": \"$_id\", \"_id\": 0, \"playerCount\": 1}}\\n    ],\\n    \"queryExplanation\": \"The query consists of two stages in the aggregation pipeline. The first stage is a $group stage, which groups the documents by the \\'team\\' field. For each group, it calculates the count of players by summing 1 for each document in the group, resulting in a \\'playerCount\\' field. The second stage is a $project stage, which reshapes each document in the stream; it includes the \\'team\\' field (renamed from the grouping \\'_id\\' field) and the \\'playerCount\\' field, while excluding the default \\'_id\\' field.\"\\n}', role='assistant', function_call=None, tool_calls=None))], created=1707421786, model='gpt-4-1106-preview', object='chat.completion', system_fingerprint='fp_225a6f324c', usage=CompletionUsage(completion_tokens=181, prompt_tokens=570, total_tokens=751))\n",
       "\u001b[31msystem: \n",
       "You are a MongoDB expert with great expertise in writing MongoDB queries \n",
       "for any given data to produce an expected output.\n",
