--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "03109185-72b1-4ff9-8e29-d8a1470c7e20",
    "metadata": {},
    "outputs": [],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0db9be5c-a35c-48e8-8a50-7f83c762f676",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "24928944-78fa-42e8-9cd6-65b8d317c518",
    "metadata": {},
    "outputs": [],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fe6d3853-49ab-46f4-8f03-97cf3825fb79",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b715a60d-43b3-40ce-b0eb-27b01bea3520",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2842f234-09b6-4d1f-a05f-a613cdba9844",
    "metadata": {},
    "outputs": [],
@@ -621,10 +621,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "94c6b76f-1bce-4802-8d14-85b4c1d5729e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function Name: executeQuery\n",
+      "Arguments: {'mongoDBQuery': '[\\n  {\\n    \"$group\": {\\n      \"_id\": \"$team\",\\n      \"playerCount\": { \"$sum\": 1 }\\n    }\\n  },\\n  {\\n    \"$project\": {\\n      \"_id\": 0, \"team\": \"$_id\", \"playerCount\": 1\\n    }\\n  }\\n]', 'queryExplanation': \"This query groups the documents by the 'team' field and then calculates the count of players for each team. It then projects the output to display only the 'team' and 'playerCount' fields in the final result.\"}\n",
+      "Assistant Response - MongoDB Query: [\n",
+      "  {\n",
+      "    \"$group\": {\n",
+      "      \"_id\": \"$team\",\n",
+      "      \"playerCount\": { \"$sum\": 1 }\n",
+      "    }\n",
+      "  },\n",
+      "  {\n",
+      "    \"$project\": {\n",
+      "      \"_id\": 0, \"team\": \"$_id\", \"playerCount\": 1\n",
+      "    }\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "thread, run = process_user_input(user_prompt)\n",
     "\n",
